# Mutual-FUnd-v2

./: AnalyticsManager.cpp  AnalyticsManager.h  CMakeLists.txt  FileManager.cpp  FileManager.h  Makefile  MarketEngine.cpp  MarketEngine.h  MutualFund.cpp  MutualFund.h  Portfolio.cpp  Portfolio.h  README.md  Transaction.cpp  Transaction.h  User.cpp  User.h  main.cpp
docs/: userguide.md
